; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-rm-dma.c_ccio_alloc_consistent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-rm-dma.c_ccio_alloc_consistent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.pci_dev*, i64, i32*)* @ccio_alloc_consistent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ccio_alloc_consistent(%struct.pci_dev* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* @GFP_ATOMIC, align 4
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @get_order(i64 %9)
  %11 = call i64 @__get_free_pages(i32 %8, i32 %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %3
  %16 = load i8*, i8** %7, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @memset(i8* %16, i32 0, i64 %17)
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @virt_to_phys(i8* %19)
  %21 = load i32*, i32** %6, align 8
  store i32 %20, i32* %21, align 4
  br label %22

22:                                               ; preds = %15, %3
  %23 = load i8*, i8** %7, align 8
  ret i8* %23
}

declare dso_local i64 @__get_free_pages(i32, i32) #1

declare dso_local i32 @get_order(i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1

declare dso_local i32 @virt_to_phys(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
